# notes

./: .gitignore  .gitmodules
algorithm/fst/: CMakeLists.txt  main.cpp
blog/: blog.md
keyboard/: README.md  requirements.txt
keyboard/chinese_to_pinyin/: chinese_to_pinyin.py
keyboard/chinese_to_pinyin/chinese_to_pinyin_data/: pinyins.txt
keyboard/pinyin_correct_error/: pinyin_correct_error.py  pinyins.txt
lintcode/: 01-matrix-walking-problem.py  4-way-unique-paths.py  4sum.py  Subarray_Sum_Closest_0.py  beautiful-arrangement.py  best-time-to-buy-and-sell-stock.py  binary-tree-maximum-path-sum.py  binary-tree-paths.py  bktree.py  borrow_classroom.py  bulb-switcher.py  coin-change.py  complete-binary-tree.py  contiguous_array.py  count_univalue_subtrees.py  delete-digits.py  edit-distance.py  equal-tree-partition.py  find-bottom-left-tree-value.py  group-anagrams.py  house-robber.py  integer-break.py  interval-search.py  is-palindrome.py  is-subsequence.py  kth-smallest-element-in-a-bst.py  largest-number.py  linked-list-cycle.py  lowest-common-ancestor.py  lru.py  maximum-size-subarray-sum-equals-k.py  meeting-rooms.py  minimum-moves-to-equal-array-elements.py  modern-ludo.py  monotone-increasing-digits.py  n-queens.py  number-of-distinct-islands.py  number-of-islands.py  paint-house.py  palindrome-linked-list.py  (+24 more)
linux/: io模型.md  同步 异步  阻塞 非阻塞.md  我是一个线程.md  那些年遇到过的面试题 - 40个多线程问题总结.md
linux/Linux Programming Interface/: .gitignore  CMakeLists.txt  main.cpp  readme.md
linux/Linux Programming Interface/cpp/: error_functions.cpp
linux/Linux Programming Interface/docs/: cmakelist.md
linux/Linux Programming Interface/include/: error_function.h  error_functions.h  header.h  tlpi_hdr.h
linux/Linux Programming Interface/lib/: error_functions.cpp
linux/Linux Programming Interface/src/: error_functions.cpp
linux/Linux Programming Interface/test/part10/: 10.cpp
linux/Linux Programming Interface/test/part12/: 12.cpp
linux/Linux Programming Interface/test/part13/: 13.cpp
linux/Linux Programming Interface/test/part15/: 15.cpp
linux/Linux Programming Interface/test/part19/: 19.cpp
linux/Linux Programming Interface/test/part20/: 20.cpp  信号.md  信号基本概念.md
linux/Linux Programming Interface/test/part20-22/: 20.cpp  21.cpp  信号基本概念.md  信号处理函数.md
linux/Linux Programming Interface/test/part23/: 23.cpp  定时器与休眠.md
linux/Linux Programming Interface/test/part24-28/: 24.cpp  25.cpp  26.cpp  27.cpp
linux/Linux Programming Interface/test/part29-33/: 29.cpp  30.cpp  31.cpp  32.cpp  33.cpp
linux/Linux Programming Interface/test/part4/: file.cpp
linux/Linux Programming Interface/test/part5/: 5.cpp  bad_exclusive_open.cpp  copy_file_descriptor.cpp  fcntl_test.cpp  file_and_file_descriptor.cpp  practices.cpp
linux/Linux Programming Interface/test/part6/: 6_2.cpp
linux/Linux Programming Interface/test/part7/: 7_1.cpp
linux/Linux Programming Interface/test/part8/: 8.cpp
linux/Linux Programming Interface/test/part9/: 9.cpp
mysql/: review.md  sql 必知必会- mysql.md
mysql/深入浅出MYSQL/: 2 SQL基础. md
mysql/深入浅出MySQL/: 11 - 视图. md  12 - 存储过程和函数.md  13 - 触发器. md  14 - 事务控制和锁定语句. md  16 - SQL Mode. md  17 - 分区. md  18 - SQL优化. md  2 - SQL基础. md  20 - 锁问题.md  3 - 数据类型.md  5 - 常用函数. md  7 - 存储引擎. md  9 - 字符集  readme.md
mysql/深入浅出mysql/: install.md
python3/: .gitignore  README.md  requirements.txt
python3/abstract_class/: study.py
python3/cache/: use.py
python3/concurrent/: concurrent_futures.py
python3/config/: config.ini  study.py
python3/coroutine/: asyc_test.py  consumer_produce.py  coroutine_test.py  readme.md
python3/coroutine/aio_http/: async_request.py  server.py
python3/datetime_/: date.py
python3/decorator/: class.py  class_class.py  class_func.py  doc.md  func.py  func_class.py  func_func.py
python3/func/: easy_error.py  itertools_.py  tips.py
python3/import_/: __init__.py  import.py
python3/import_/pkg/: __init__.py  a.py  b.py
python3/inotify/: inotify_test.py
python3/magic_method/: getattr.py  setattr.py
python3/metaclass/: study.py
python3/pandas_/: dataframe.py  docs.py  easy_error.py  group_by.py  index.py  series.py
python3/pytest_/: base.py  conftest.py  fixture.py  init.py
python3/schema_/: study.py
python3/thread/: daemon_test.py
python3/typing_/: study.py
redis/: redis入门指南.md
tcp_ip/: TCP IP.md
